compiler/testData/diagnostics/tests/secondaryConstructors/kt6993.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER
class X<T>(val t: T) {
    constructor(t: T, i: Int) : this(<!TYPE_MISMATCH!>i<!>)
}